2025-11 Cumulative Update for Version 2511 (6.0.7)

--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -236,6 +236,10 @@
             <li>
               <a href="eicw-5.html" class="active">Rethinking CCL6 Signages</a>
             </li>
+
+            <li>
+              <a href="btr-1.html">Behind The Redesign</a>
+            </li>
           </ul>
 
           <div class="right-arrow active">
@@ -385,10 +389,12 @@
                   <h5>For my Redesign, I retained the same guidelines, mainly:</h5>
                   <p>
                     • Platform Information (Platform A/B) <br>
-                    • <span style="color: #80a8cc; font-weight: bold;">Train Service Route (Clockwise/Anti-Clockwise
+                    • <span style="color: #80a8cc; font-weight: bold; text-decoration: underline;">Train Service Route
+                      (Clockwise/Anti-Clockwise
                       Loop)</span> <br>
                     • Station Code for non-loop service trains at terminal stations (eg. CC32) <br>
-                    • <span style="color: #80a8cc; font-weight: bold;">Addition of Bold Formats to selected Texts</span>
+                    • <span style="color: #80a8cc; font-weight: bold; text-decoration: underline;">Addition of Bold
+                      Formats to selected Texts</span>
                   </p>
 
                   <br>
@@ -462,7 +468,8 @@
                     • Simplified icons and elements <br>
                     • Concise descriptions <br>
                     • Station name abbreviation and caplets instead of a colour band <br>
-                    • <span style="color: #80a8cc; font-weight: bold;">Blue Background for signages leading to
+                    • <span style="color: #80a8cc; font-weight: bold; text-decoration: underline;">Blue Background for
+                      signages leading to
                       Lift</span>
                   </p>
 
@@ -525,16 +532,19 @@
                   <p>
                     • Black background <br>
                     • Single coloured caplet with station codes for non-loop services <br>
-                    • Indication of train service direction - towards < next interchange station> for loop services </p>
+                    • Indication of train service direction - towards <-- next interchange station --> for loop services
+                  </p>
 
                   <br>
                   <h5>For my Redesign, I retained the same guidelines, mainly:</h5>
                   <p>
                     • Black background <br>
-                    • <span style="color: #80a8cc; font-weight: bold;">Single coloured caplet with station codes for
+                    • <span style="color: #80a8cc; font-weight: bold; text-decoration: underline;">Single coloured
+                      caplet with station codes for
                       non-loop services & interchange stations to save space</span> <br>
-                    • <span style="color: #80a8cc; font-weight: bold;">Indication of train service direction - via
-                      < next interchange station> for loop services
+                    • <span style="color: #80a8cc; font-weight: bold; text-decoration: underline;">Indication of train
+                      service direction - via
+                      <-- next interchange station --> for loop services
                     </span> <br>
                     • UI is matched exactly to the ones found in TEL
                   </p>
@@ -550,7 +560,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-3.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-3.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-3.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -558,7 +569,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-2a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-3a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-3a.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -589,7 +601,7 @@
                   <h5>For the following, LTA has proposed three options, mainly:</h5>
                   <p>
                     <u>Option 1</u> <br>
-                    • Show towards < next interchange station> to indicate direction of train service <br>
+                    • Show towards <-- next interchange station --> to indicate direction of train service <br>
                       • Display interchange colours <br><br>
 
                       <u>Option 2</u> <br>
@@ -728,11 +740,12 @@
                   <p>
                     <u>Option 1</u> <br>
                     • Within a text box ​ <br>
-                    • Indicates Platform ID and the respective towards < next interchange station> information <br><br>
+                    • Indicates Platform ID and the respective towards <-- next interchange station --> information
+                      <br><br>
 
                       <u>Option 2</u> <br>
                       • Displayed as a tab ​ <br>
-                      • Only indicate towards < next interchange station> information​ <br>
+                      • Only indicate towards <-- next interchange station --> information​ <br>
                         • Includes transfer icon
                   </p>
 
@@ -741,7 +754,7 @@
                   <p>
                     <u>Option 2</u> <br>
                     • Displayed as a tab ​ <br>
-                    • Only indicate via < next interchange station> information​ <br>
+                    • Only indicate via <-- next interchange station --> information​ <br>
                       • Includes transfer icon
                   </p>
                 </div>
@@ -794,14 +807,14 @@
                     • Full display of all stations on Circle Line ​ <br>
                     • Applying half circle fade-out approach to suggest shortest route to the listed stations. Faded
                     sections indicate longer travel time​ <br>
-                    • Indication of train service direction - towards < next interchange station> <br>
+                    • Indication of train service direction - towards <-- next interchange station --> <br>
                       • Section B - Double liners with interchange-coloured caplets <br><br>
 
                       <u>Option 2</u> <br>
                       • Full display of all stations on Circle Line ​ <br>
                       • Applying half circle fade-out approach to suggest shortest route to the listed stations. Faded
                       sections indicate longer travel time​ <br>
-                      • Indication of train service direction - towards < next interchange station> <br>
+                      • Indication of train service direction - towards <-- next interchange station --> <br>
                         • <span style="color: #80a8cc;">Section B - Single liner with CCL-coloured caplets</span>
                         <br><br>
                   </p>
@@ -813,7 +826,7 @@
                     • Full display of all stations on Circle Line ​ <br>
                     • Applying half circle fade-out approach to suggest shortest route to the listed stations. Faded
                     sections indicate longer travel time​
-                    • Indication of train service direction - via < next interchange station> <br>
+                    • Indication of train service direction - via <-- next interchange station --> <br>
                       • Section B - Single liner with CCL-coloured caplets
                   </p>
                 </div>
@@ -865,14 +878,16 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-1.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-1.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-1.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                   </figcaption>
                 </div>
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-1a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-1a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-1a.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                   </figcaption>
                 </div>
@@ -880,7 +895,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-5.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-5.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-5.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -888,7 +904,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-5a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-5a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-5a.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -922,7 +939,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-4.png" id="os" class="portfolio-img">
-                      <img src="img/ccl6-4.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-4.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -930,7 +948,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-4a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-4a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-4a.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
@@ -964,7 +983,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-2.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-2.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-2.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">Proposed Design by LTA</p>
                   </figcaption>
@@ -972,7 +992,8 @@
                 <div class="column column-pic">
                   <figcaption>
                     <a href="img/ccl6-2a.png" id="os" class="portfolio-img ">
-                      <img src="img/ccl6-2a.png" id="os-img" class="img-fluid cp-img" alt="os" style="border-radius: 0px;">
+                      <img src="img/ccl6-2a.png" id="os-img" class="img-fluid cp-img" alt="os"
+                        style="border-radius: 0px;">
                     </a>
                     <p style="text-align: center;">My Redesigned Version</p>
                   </figcaption>
