--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -223,6 +223,10 @@
                         <li>
                             <a href="eicw-5.html">Rethinking CCL6 Signages</a>
                         </li>
+
+                        <li>
+                            <a href="btr-1.html" class="active">Behind The Redesign</a>
+                        </li>
                     </ul>
 
                     <div class="right-arrow active">
@@ -267,8 +271,10 @@
                                 <!-- Evolution of our Transit System Design -->
                                 <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                                     <div class="banner-eicw">
-                                        <a href="img/evo-light.png" id="evo" class="portfolio-img" style="box-shadow: none; border: none;">
-                                            <img src="img/evo-light.png" id="evo-img" class="img-fluid" alt="evo" style="box-shadow: none; border: none;">
+                                        <a href="img/evo-light.png" id="evo" class="portfolio-img"
+                                            style="box-shadow: none; border: none;">
+                                            <img src="img/evo-light.png" id="evo-img" class="img-fluid" alt="evo"
+                                                style="box-shadow: none; border: none;">
                                         </a>
                                     </div>
                                 </div>
