--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Proposed UI/UX Changes | EICW</title>
+  <title>Behind The Redesign | EICW</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/i8n9KYs.png" />
@@ -160,7 +160,7 @@
   <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
   <!-- Cover Header -->
-  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cui-img">
+  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="covbtr-img">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -183,13 +183,13 @@
                   </a>
                 </li>
                 <li class="breadcrumb-item">
-                  <a href="eicw.html">EICW</a>
+                  <a href="#">EICW</a>
                 </li>
               </ol>
             </nav>
             <div class="page-title-wrapper">
-              <h1 class="page-title-single">Proposed UI/UX Changes</h1>
-              <p class="page-subtitle">5 mins read</p>
+              <h1 class="page-title-single">Behind The Redesign</h1>
+              <p class="page-subtitle">3 mins read</p>
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@
             </li>
 
             <li>
-              <a href="eicw-4.html" class="active">Proposed UI/UX Changes</a>
+              <a href="eicw-4.html">Proposed UI/UX Changes</a>
             </li>
 
             <li>
@@ -241,6 +241,7 @@
       </div>
 
     </div>
+
   </section>
 
   <!-- Section Content 1 -->
@@ -255,15 +256,18 @@
               <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
                   <h2 class="text-center"
-                    style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">Proposed UI/UX
-                    Changes</h2>
-                  <p style="text-align: justify;">In aligning with the current Wayfinding System, I have incorporated
-                    the
-                    elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
-                    navigate and understand the information presented, regardless of their familiarity with the system.
-                    These user interfaces are designed to be intuitive and visually appealing, enhancing the overall
-                    commuting experience.
-                  </p>
+                    style="font-size: 30px; font-weight:bold; text-align: left; padding-top: 1em;">My redesigns are not
+                    radical.</h2>
+                  <p style="text-align: justify;">People often design their own concepts based on how they want it to
+                    look
+                    like, rather than how it should look like. My redesigns are not about changing the entire
+                    design of the Wayfinding System, but rather improving on the existing design to make it more
+                    user-friendly and accessible to all users. I do not believe in creating another Design System, when
+                    the current ones are barely a decades old.</p>
+
+                  <p style="text-align: justify;">Honestly, each designs and UIs you see in real-life are not entirely
+                    bad. So in this section, I'll bring you through the stage from brainstorming, all the way to
+                    executing it into an actual concept.</p>
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms"
@@ -271,15 +275,9 @@
                 <a href="#bcr">
                   <button class="btn">Bus Card Reader UI (LTA)</button>
                 </a>
-                <a href="#bat">
-                  <button class="btn">Bus Arrival Timings (LTA)</button>
-                </a>
-                <a href="#tv">
-                  <button class="btn">TrainVision (TEL)</button>
-                </a>
-                <a href="#staris2">
+                <!-- <a href="#staris2">
                   <button class="btn">STARiS 2.0 (SMRT)</button>
-                </a>
+                </a> -->
                 <a href="#cddbp">
                   <button class="btn">Car Door Display (BPLRT)</button>
                 </a>
@@ -297,7 +295,6 @@
     <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
-
           <!-- Bus Card Reader UI (LTA) -->
           <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
@@ -306,190 +303,117 @@
                 Reader UI (LTA)
               </h2>
               </h2>
-              <p style="text-align: justify;">The current Bus Card Readers are getting replaced! As such, I have come up
-                with a design whereby the Interface match the ones used on the MRT systems, particularly the NSEWL and
-                CCL. For those MRT lines, they too, are getting their faregates replaced. As we can see, we're
-                progressively going for a more full-screen approach, where you will tap your card on the screen itself.
+              <p style="text-align: justify;">The current Bus Card Readers are getting old. Hence, the UI will need a
+                refresh as well!
+                Had a quick look at the upcoming Card Readers that are being trialled on selected buses, and I feel the
+                UI is good! I have decided to make a guess on how the UI could look like, and also incorporated some
+                elemnts from the current Design System.
               </p>
 
-              <p class="no-align">While the User Interface for the upcoming Card Readers are not yet known,
-                these are what I envisioned the designs to be!</p>
-
-              <div class="row">
-                <div class="banner-eicw">
-                  <a href="img-2/bcr-light.png" id="bcr1" class="portfolio-img">
-                    <img src="img-2/bcr-light.png" id="bcr1-img" class="img-fluid" alt="bcr1">
-                  </a>
-
-                  <a href="img-2/bcr-var-light.png" id="bcr4" class="portfolio-img">
-                    <img src="img-2/bcr-var-light.png" id="bcr4-img" class="img-fluid" alt="bcr4">
-                  </a>
-                </div>
-              </div>
-
-            </div>
-          </div>
-
-
-          <hr>
-
-          <!-- Bus Arrival Timings (LTA) -->
-          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-            <div class="info justify-content-center">
-
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="bat">Bus Arrival
-                Timings (LTA)
-              </h2>
-              <p style="text-align: justify;">The new panels are an improved version with vibrant graphics and bigger
-                fonts and provide information that allows commuters to better plan their journeys. I have redesigned it
-                to match the current design system standards.</p>
-
-              <div class="banner-eicw">
-                <a href="img/lcd-light.png" id="lcd1" class="portfolio-img">
-                  <img src="img/lcd-light.png" id="lcd1-img" class="img-fluid" alt="lcd1">
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <hr>
-
-          <!-- TrainVision (TEL) -->
-          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-            <div class="info justify-content-center">
-
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="tv">TrainVision
-                (TEL)
-              </h2>
-              <p style="text-align: justify;"> For the LCD screens on the TEL trains, I have redesigned it to look
-                exactly
-                like the other counterparts on the NSL, EWL, NEL and CCL.</p>
-
-              <div class="banner-eicw">
-                <a href="img/lcd2-light.png" id="lcd2" class="portfolio-img">
-                  <img src="img/lcd2-light.png" id="lcd2-img" class="img-fluid" alt="lcd2">
-                </a>
-              </div>
-            </div>
-          </div>
-
-          <hr>
-
-          <!-- STARiS 2.0 (SMRT) -->
-          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-            <div class="info justify-content-center">
-
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="staris2">STARiS
-                2.0 (SMRT)
-              </h2>
-              <p style="text-align: justify;"> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it
-                to
-                look
-                exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI is <i>waaay</i> too
-                dated.</p>
-
               <div class="row">
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img/staris2-B.png" id="staris2-b" class="portfolio-img ">
-                      <img src="img/staris2-B.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
+                    <a href="img-2/bcr-compare-light.png" id="bcrcrc" class="portfolio-img ">
+                      <img src="img-2/bcr-compare-light.png" id="bcrcrc-img" class="img-fluid cp-img" alt="bcrcrc">
                     </a>
-                    <p style="text-align: justify;">Current STARiS 2.0 UI, on most of the KSFB/C Trains. <b>Older</b>
-                      Line
-                      Diagram Layout.
-                    </p>
-                  </figcaption>
-                </div>
-
-
-                <div class="column column-pic">
-                  <figcaption>
-                    <a href="img/staris2-C.png" id="staris2-c" class="portfolio-img ">
-                      <img src="img/staris2-C.png" id="staris2-c-img" class="img-fluid cp-img" alt="staris2-c">
-                    </a>
-                    <p style="text-align: justify;">Current STARiS 2.0 UI, on the KSFC Trains. <b>Updated</b> Line
-                      Diagram Layout.
+                    <p style="text-align: justify;">📸: <br>
+                      - <a
+                        href="//images.squarespace-cdn.com/content/v1/5bcfc8c07a1fbd730b2ba933/1558377402895-3VI3FNHXOZQWI997KRES/MRT+gate+to+tap.jpg">Current
+                        MRT Card Reader</a><br>
+                      - <a href="https://x.com/big_pedestrian/status/1782216274090836184/photo/1">Current Bus Card
+                        Reader (via X)</a>
                     </p>
                   </figcaption>
                 </div>
 
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img-2/staris2-D.png" id="staris2-b" class="portfolio-img ">
-                      <img src="img-2/staris2-D.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
+                    <a href="img-2/bcr-tap-light.png" id="bcrtap" class="portfolio-img">
+                      <img src="img-2/bcr-tap-light.png" id="bcrtap-img" class="img-fluid cp-img" alt="bcrtap">
                     </a>
-                    <p style="text-align: justify;">Revamped STARiS 2.0 UI, on one of the KSFC Trains. <b>Updated</b>
-                      Line
-                      Diagram Layout and <b>New</b> Next Station Interface
-                    </p>
-                  </figcaption>
-                </div>
-
-                <div class="column column-pic">
-                  <figcaption>
-                    <a href="img-2/staris2-red.png" id="staris2-b" class="portfolio-img ">
-                      <img src="img-2/staris2-red.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
-                    </a>
-                    <p style="text-align: justify;">Revamped STARiS 2.0 UI. <b>Proposed Redesign</b>
-                    </p>
                   </figcaption>
                 </div>
 
                 <div class="banner-eicw">
-                  <a href="img/lcd3-light.png" id="lcd3" class="portfolio-img">
-                    <img src="img/lcd3-light.png" id="lcd3-img" class="img-fluid" alt="lcd3">
+                  <a href="img-2/btrcr1-light.png" id="btrcr1" class="portfolio-img">
+                    <img src="img-2/btrcr1-light.png" id="btrcr1-img" class="img-fluid" alt="btrcr1"
+                      style="box-shadow: none; border: none;">
+                  </a>
+
+                  <a href="img-2/btrcr2-light.png" id="btrcr2" class="portfolio-img">
+                    <img src="img-2/btrcr2-light.png" id="btrcr2-img" class="img-fluid" alt="btrcr2"
+                      style="box-shadow: none; border: none;">
+                  </a>
+
+                  <a href="img-2/btrcr3-light.png" id="btrcr3" class="portfolio-img">
+                    <img src="img-2/btrcr3-light.png" id="btrcr3-img" class="img-fluid" alt="btrcr3"
+                      style="box-shadow: none; border: none;">
                   </a>
                 </div>
-
-                <iframe width="1280" height="512" src="https://www.youtube.com/embed/dQoxy7rBRAU?si=-Ko9xKEyeDRb1Kni"
-                  title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               </div>
-              <br>
+
             </div>
           </div>
-
           <hr>
+          <p><i>This section is being updated. Check back soon for more!</i></p>
 
           <!-- Car Door Display (BPLRT) -->
-          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+          <!-- <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="cddbp">Car Door
-                Display (BPLRT)
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold;" id="cddbp">Car Door Display (BPLRT)
               </h2>
-              <p style="text-align: justify;"> For the LCD screens on the new C801B trains, I have redesigned it to
-                look
-                exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI works I guess, but it's
-                starting to look old, and the design does not match current design standards.</p>
+              </h2>
+              <p style="text-align: justify;">The current LCD Screen UIs are alright, but I feel that it should align
+                with
+                the overall Design System. Hence, I have redesigned the UI to match the overall Design System, while
+                retaining most of the elements in the current UI.
+              </p>
 
               <div class="row">
                 <div class="column column-pic">
                   <figcaption>
-                    <a href="img-2/cddbpori.png" id="cddbpori" class="portfolio-img ">
-                      <img src="img-2/cddbpori.png" id="cddbpori-img" class="img-fluid cp-img" alt="cddbpori">
+                    <a href="img-2/bcr-compare-light.png" id="bcrcrc" class="portfolio-img ">
+                      <img src="img-2/bcr-compare-light.png" id="bcrcrc-img" class="img-fluid cp-img" alt="bcrcrc">
                     </a>
-                    <p style="text-align: justify;">Current CDD UI Design on the C801B Trains.
+                    <p style="text-align: justify;">📸: <br>
+                      - <a
+                        href="//images.squarespace-cdn.com/content/v1/5bcfc8c07a1fbd730b2ba933/1558377402895-3VI3FNHXOZQWI997KRES/MRT+gate+to+tap.jpg">Current
+                        MRT Card Reader</a><br>
+                      - <a href="https://x.com/big_pedestrian/status/1782216274090836184/photo/1">Current Bus Card
+                        Reader (via X)</a>
                     </p>
                   </figcaption>
                 </div>
 
-
-                <div class="banner-eicw">
-                  <a href="img-2/cddbp-light.png" id="cddbp-lcd" class="portfolio-img">
-                    <img src="img-2/cddbp-light.png" id="cddbp-lcd-img" class="img-fluid" alt="cddbp">
-                  </a>
+                <div class="column column-pic">
+                  <figcaption>
+                    <a href="img-2/bcr-tap-light.png" id="bcrtap" class="portfolio-img">
+                      <img src="img-2/bcr-tap-light.png" id="bcrtap-img" class="img-fluid cp-img" alt="bcrtap">
+                    </a>
+                  </figcaption>
                 </div>
 
-                <iframe width="1280" height="512" src="https://www.youtube.com/embed/eHnDn4KbKPg?si=G87h7ori1atFzCs1"
-                  title="YouTube video player" frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-              </div>
-            </div>
+                <div class="banner-eicw">
+                  <a href="img-2/btrcr1-light.png" id="btrcr1" class="portfolio-img">
+                    <img src="img-2/btrcr1-light.png" id="btrcr1-img" class="img-fluid" alt="btrcr1"
+                      style="box-shadow: none; border: none;">
+                  </a>
 
-          </div>
+                  <a href="img-2/btrcr2-light.png" id="btrcr2" class="portfolio-img">
+                    <img src="img-2/btrcr2-light.png" id="btrcr2-img" class="img-fluid" alt="btrcr2"
+                      style="box-shadow: none; border: none;">
+                  </a>
+
+                  <a href="img-2/btrcr3-light.png" id="btrcr3" class="portfolio-img">
+                    <img src="img-2/btrcr3-light.png" id="btrcr3-img" class="img-fluid" alt="btrcr3"
+                      style="box-shadow: none; border: none;">
+                  </a>
+                </div>
+              </div>
+
+            </div>
+          </div> -->
 
         </div>
       </div>
@@ -527,7 +451,7 @@
 
   <script src="../js/navtabs.js"></script>
 
-  <script src="js/eicw-4.js"></script>
+  <script src="js/btr-1.js"></script>
 
   <script src="../js/jquery.min.js"></script>
 
