--- a/eicw/eicw-3.html
+++ b/eicw/eicw-3.html
@@ -223,6 +223,10 @@
             <li>
               <a href="eicw-5.html">Rethinking CCL6 Signages</a>
             </li>
+
+            <li>
+              <a href="btr-1.html" class="active">Behind The Redesign</a>
+            </li>
           </ul>
 
           <div class="right-arrow active">
@@ -250,11 +254,13 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <p style="text-align: justify; padding-top: 2em;">This section is catered for the Buses side of things - signages and what
+                  <p style="text-align: justify; padding-top: 2em;">This section is catered for the Buses side of things
+                    - signages and what
                     not. A lot of focus has been given to the Train's side of things, so why not show the same love for
                     the Buses' side of things too?</i></p>
 
-                  <p class="no-align"> For the redesigns in this section, I'll be adopting my own design language and principles, based
+                  <p class="no-align"> For the redesigns in this section, I'll be adopting my own design language and
+                    principles, based
                     on the changes I proposed on <a href="eicw-2.html" class="hyperlink">the second page</a>.</p>
                 </div>
               </div>
@@ -405,8 +411,8 @@
           </div>
         </div>
 
-        <p>Hence I've decided to redesign and make the design more consistent. As mentioned in the <a
-            href="eicw-2.html" class="hyperlink">second page</a>, I have decided to only stick with just the Dark Grey colour across all
+        <p>Hence I've decided to redesign and make the design more consistent. As mentioned in the <a href="eicw-2.html"
+            class="hyperlink">second page</a>, I have decided to only stick with just the Dark Grey colour across all
           signages.</p>
 
         <div class="banner-eicw">
@@ -511,7 +517,8 @@
         <p class="no-align">Let's take a look at the Interchange Name signages implemented at the Pasir Ris ITH.</p>
 
         <p class="no-align">The design system used here is the ones designed by <a
-            href="https://www.transportdesign.com/projects/singapore-connecting-a-city" class="hyperlink">TDC</a>. Hence, I will be
+            href="https://www.transportdesign.com/projects/singapore-connecting-a-city" class="hyperlink">TDC</a>.
+          Hence, I will be
           switching over to the new design system, but using my changes.</p>
 
         <div class="row wow fadeIn" data-wow-delay="100ms">
