--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -266,8 +266,7 @@
                     the current ones are barely a decades old.</p>
 
                   <p style="text-align: justify;">Honestly, each designs and UIs you see in real-life are not entirely
-                    bad. So in this section, I'll bring you through the stage from brainstorming, all the way to
-                    executing it into an actual concept.</p>
+                    bad. So in this section, I'll bring you through my thought process in redesigning these elements.</p>
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeIn" data-wow-delay="100ms"
