2025-11 Cumulative Update for Version 2511 (6.0.8)

--- a/eicw/btr-1.html
+++ b/eicw/btr-1.html
@@ -357,7 +357,7 @@
           <p><i>This section is being updated. Check back soon for more!</i></p>
 
           <!-- Car Door Display (BPLRT) -->
-          <!-- <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+          <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold;" id="cddbp">Car Door Display (BPLRT)
@@ -412,7 +412,7 @@
               </div>
 
             </div>
-          </div> -->
+          </div>
 
         </div>
       </div>
