--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -225,7 +225,7 @@
                         </li>
 
                         <li>
-                            <a href="btr-1.html" class="active">Behind The Redesign</a>
+                            <a href="btr-1.html">Behind The Redesign</a>
                         </li>
                     </ul>
 
